@@ -62,6 +62,8 @@ Version History:
   * Better ANSI support: background colors and underline mode now supported
   * If you are in a tank, it will show a red line indicating turret facing
   * Other jumping mechs show a green line indicating jump heading
+  * Hex numbers along side and top now have a black bar behind them to make them much easier to read
+  * New option to display your heat level in the tactical display underneath your unit
   
  Bug Fixes:
  
